# cinema-score

./: .gitignore  Cargo.toml  Dockerfile  README.md  azure-pipelines.yml  script.sh
src/: main.rs
static/: add-movie.html  delete-movie.html  login.html  movies.html  register.html  styles.css
static/js/: script.js
